# FASTAPI-DB-PRACTISE

./: .env  pyproject.toml  requirements.txt
src/: config.py  main.py  readme
src/models/: base_model.py  department.py  employee.py  employee_project.py  project.py
src/schemas/: department.py  employee.py  employee_project.py  project.py
src/scripts/: create_tables.py  insert_EmpProject.py  insert_department.py  insert_employee.py  insert_project.py
src/services/: department.py  employee.py  employee_project.py  project.py
src/utils/: logger.py  response_utils.py
