[project]
name = "ems-rest"
version = "0.1.0"
description = ""
authors = [
    {name = "POOJITHA29CJ",email = "poojicj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "peewee (>=3.18.2,<4.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "mysql-connector-python (>=9.4.0,<10.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
